--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -182,27 +182,6 @@
         @extend %title-font;
         margin-bottom: 15px;
     }
-    &__link {
-        display: inline-block;
-        font-size: 16px;
-        color: #3771C8;
-        padding: 0 26px 5px;
-        position: relative;
-        &::after {
-            position: absolute;
-            content: '';
-            width: 100%;
-            height: 6px;
-            border: 1px solid #F9D15C;
-            border-radius: 3px;
-            bottom: 0;
-            left: 0;
-            transition: all .3s;
-        }
-        &:hover::after {
-            background-color: #F9D15C;
-        }
-    }
     &__row {
         display: flex;
         flex-wrap: wrap;
@@ -248,7 +227,7 @@
     }
 }
 
-.description {
+.about {
     &__inner {
         padding-bottom: 100px;
         display: grid;
@@ -322,7 +301,253 @@
     }
 }
 
+.reviews {
+    overflow: hidden;
+    &__inner {
+        padding-bottom: 120px;
+    }
+    &__item {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        background-color: #F9D15C;
+        border-radius: 12px;
+    }
+    &__item-img img {
+        width: 100%;
+        height: 100%;
+        border-radius: 12px 0 0 12px;
+        object-fit: cover;
+    }
+    &__item-info {
+        padding: 42px 71px;
+    }
+    &__author {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    &__author-img {
+        width: 62px;
+        height: 64px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin: 0 auto 8px;
+    }
+    &__text {
+        font-size: 30px;
+        font-style: italic;
+        font-weight: 300;
+        line-height: 1.2;
+        color: $light-black;
+        margin-bottom: 44px;
+    }
+}
+
+.location {
+    &__inner {
+        margin-bottom: 120px;
+    }
+    &__title {
+        @extend %title-font;
+        margin-bottom: 20px;
+    }
+    &__subtitle {
+        max-width: 409px;
+        margin-bottom: 20px;
+    }
+    &__nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-bottom: 40px;
+    }
+    &__list {
+        display: flex;
+        margin-left: -20px;
+    }
+    &__list-item {
+        margin: 0 20px;
+    }
+    &__list-btn {
+        padding: 8px 28px;
+        border: 1px solid #E8E8E8;
+        border-radius: 8px;
+        color: $gray;
+        background-color: #fff;
+        line-height: 1.4;
+        cursor: pointer;
+    }
+    &__row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 0 -12px;
+    }
+    &__col {
+        width: 33.33%;
+        padding: 12px;
+    }
+    &__item {
+        display: flex;
+        flex-direction: column;
+        background-color: #fff;
+        height: 100%;
+        color: $gray;
+    }
+    &__item-img img {
+        width: 100%;
+        height: 100%;
+        max-height: 320px;
+        object-fit: cover;
+    }
+    &__item-info {
+        border-radius: 0 0 16px 16px;
+        border: 1px solid #E8E8E8;
+        border-top: none;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
+    &__item-title {
+        font-size: 20px;
+        font-weight: 600;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        color: $light-black;
+        margin-bottom: 8px;
+    }
+    &__item-text {
+        font-size: 14px;
+        margin-bottom: 25px;
+        flex-grow: 1;
+    }
+    &__details {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+    }
+    &__item-price {
+        font-size: 16px;
+    }
+    &__item-price b {
+        font-size: 24px;
+        font-weight: 600;
+        color: #3771C8;
+    }
+    &__item-link {
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 600;
+        color: #fff;
+        border-radius: 4px;
+        background-color: #3771C8;
+        padding: 5px 15px;
+    }
+}
+
+.contacts {
+    padding-bottom: 120px;
+    &__inner {
+        background-color: #EAECEB;
+        border-radius: 16px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__img img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &__info {
+        padding: 60px 75px 66px;
+    }
+    &__title {
+        @extend %title-font;
+        margin-bottom: 20px;
+        max-width: 700px;
+    }
+    &__subtitle {
+        max-width: 535px;
+        margin-bottom: 92px;
+    }
+    &__form {
+        max-width: 485px;
+        width: 100%;
+        position: relative;
+    }
+    &__form-email {
+        width: 100%;
+        border: none;
+        background-color: #fff;
+        padding: 14px 150px 14px 26px;
+        border-radius: 50px;
+        &::placeholder {
+            font-size: 14px;
+        }
+    }
+    &__form-btn {
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 14px 32px;
+        color: #fff;
+        background-color: #3771C8;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+    }
+}
 
 
+.footer {
+    &__inner {
+        padding-bottom: 63px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        max-width: 1062px;
+        margin: 0 auto;
+    }
+    &__info {
+        max-width: 264px;
+    }
+    &__logo {
+        display: inline-block;
+        max-height: 90px;
+        margin-bottom: 20px;
+    }
+    &__text {
+        margin-bottom: 32px;
+    }
+    &__social {
+        display: flex;
+        align-items: center;
+    }
+    &__social-link + .footer__social-link {
+        display: inline-block;
+        margin-left: 30px;
+    }
+    &__social-icon {
+        width: 16px;
+        height: 16px;
+    }
+    &__list-title {
+        font-size: 24px;
+        color: $light-black;
+        margin-bottom: 20px;
+        font-weight: 400;
+    }
+    &__list-item {
+        margin-bottom: 16px;
+    }
+    &__list-link {
+        color: $light-black;
+        transition: all .3s;
+        &:hover {
+            color: #999;
+        }
+    }
+}
 
 @import 'media';
