--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,6 +1,6 @@
 html,
 body {
-    height: 100%;
+    height: auto;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1.7;
@@ -12,6 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    padding-top: 125px;
 }
 
 .main {
