--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -139,31 +139,70 @@
         display: inline;
         max-width: 218px;
         width: 100%;
+        position: relative;
+    }
+    &__form-list {
+        display: none;
+        position: absolute;
+        top: 65px;
+        left: 0;
+        right: 0;
+        background-color: #FAFAFA;
+        font-size: 24px;
+        line-height: 1;
+        color: $light-black;
+        border-radius: 8px;
+        z-index: 5;
+        box-shadow: 0 0 15px rgb(0 0 0 / 10%);
+        &.open {
+            display: block;
+        }
+    }
+    &__hidden-input {
+        display: none;
+    }
+    &__form-item {
+        padding: 12px 12px 12px 54px;
+        cursor: pointer;
+        background-color: #FAFAFA;
+        width: 100%;
+        transition: all .2s;
+        &:hover {
+            background-color: #f3f0f0;
+        }
+        &:last-child {
+            border-radius: 0 0 8px 8px;
+            padding-bottom: 20px;
+        }
+        &:first-child {
+            border-radius: 8px 8px 0 0;
+        }
     }
     &__form-date,
-    &__form-people {
+    &__select-btn {
         display: inline;
         max-width: 218px;
         width: 100%;
         text-align: left;
-        cursor: pointer;
-    }
-    &__form-country {
-        flex-grow: 1;
     }
     &__form-date,
-    &__form-people,
-    &__form-country {
+    &__select-btn,
+    &__select-country {
         background-color: #FAFAFA;
         border-radius: 8px;
         padding: 12px 12px 12px 54px;
-        border: none;
+        border: 1px solid #FAFAFA;
         background-size: 24px 24px;
         background-position: 15px 15px;
         background-repeat: no-repeat;
         font-size: 24px;
-        line-height: 1;
+        line-height: 1.3;
         color: $light-black;
+        cursor: pointer;
+        &:focus {
+            outline: none;
+            border: 1px solid #999;
+        }
         &::placeholder {
             font-size: 24px;
             color: $light-black;
@@ -173,11 +212,18 @@
     &__form-date {
         background-image: url(../images/calendar.svg);
     }
-    &__form-people {
+    &__select-btn.people {
         background-image: url(../images/person.svg);
     }
-    &__form-country {
+    &__select-country {
         background-image: url(../images/pin.svg);
+        max-width: 404px;
+        width: 100%;
+        flex-grow: 1;
+        appearance: none;
+        & .booking__form-item {
+            font-size: 18px;
+        }
     }
     &__form-btn {
         background-color: #3771C8;
@@ -607,5 +653,6 @@
         }
     }
 }
+
 
 @import 'media';
