--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,3 +1,55 @@
+@media (max-width: 1281px) {
+    .booking {
+        &__title {
+            font-size: 44px;
+        }
+        &__form {
+            max-width: 440px;
+        }
+        &__form-date,
+        &__select-btn,
+        &__select-country,
+        &__form-list {
+            font-size: 20px;
+            background-position: 15px 12px;
+        }
+        &__form-date,
+        &__select-btn,
+        &__form-select {
+            max-width: 190px;
+        }
+        &__select-country .booking__form-item {
+            font-size: 16px;
+        }
+        &__item:first-child::after {
+            bottom: 20px;
+            font-size: 32px;
+        }
+    }
+    .about {
+        &__items {
+            margin: 0 -15px 45px;
+        }
+        &__item {
+            margin: 0 15px 15px;
+            max-width: none;
+            width: 40%;
+        }
+        &__item-title {
+            font-size: 24px;
+        }
+    }
+    .partners {
+        &__inner {
+            justify-content: space-around;
+        }
+        &__item {
+            margin: 0 20px;
+            max-width: 130px;
+        }
+    }
+}
+
 @media (max-width: 900px) {
     .header {
         &__inner {
