--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -376,6 +376,7 @@
         color: $light-black;
     }
     &__info-link {
+        display: inline-block;
         color: #fff;
         padding: 16px 32px;
         background-color: #3771C8;
@@ -562,6 +563,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 0 16px 16px 0;
     }
     &__info {
         padding: 60px 75px 66px;
